...
                }
                
                LiveVideoView()
                    .tabItem {
                        if self.appState.userData?.userType == .dogsitter {
                            Image(systemName: "speedometer")
                            Text("Camera Control")
                        } else {
                            Image(systemName: "video")
                            Text("Live Video")
                        }
                    }
                    .tag(TabSelection.liveVideoView)
                
                RecordingListView(recordingListVM: self.recordingListVM)
                    .tabItem {
...
